# T2IEval

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  justfile  pyproject.toml
docs/: ella_implementation_notes.md
docs/guides/: extending.md
docs/implementation/: ella.md
docs/parameters/: generation.md  models.md  overview.md
docs/parameters/evaluators/: ella.md  genaibench.md  geneval.md  t2i_corebench.md
docs/presentation/: ppt.tex
examples/: run_basic.yaml  run_ella_sd15.yaml  run_suite.yaml
examples/ella/: run_ella_sd15.yaml
examples/genaibench/: run_genaibench_sd21.yaml  run_genaibench_sd21_base.yaml  run_genaibench_sdxl.yaml  run_genaibench_smoke.yaml
examples/geneval/: run_geneval_sd15.yaml  run_multi.yaml  run_sdxl.yaml  run_zimage_turbo.yaml
examples/t2i_corebench/: run_t2i_corebench_existing_images.yaml  run_t2i_corebench_qwen_image.yaml  run_t2i_corebench_qwen_image_smoke.yaml
src/t2i_eval/: __init__.py
src/t2i_eval/cli/: __init__.py  artifacts.py  config_loader.py  logger.py  main.py  runner.py  schemas.py  utils.py
src/t2i_eval/core/: benchmark.py  evaluator.py  model.py  registry.py  schema.py
src/t2i_eval/eval/: __init__.py  aggregator.py  loader.py  postprocessor.py  processor.py  simple_evaluator.py
src/t2i_eval/eval/ella/: __init__.py  evaluator.py  loader.py  scorer.py
src/t2i_eval/eval/genaibench/: __init__.py  evaluator.py  loader.py  scorer.py
src/t2i_eval/eval/geneval/: __init__.py  evaluator.py  utils.py
src/t2i_eval/eval/t2i_corebench/: __init__.py  evaluator.py  loader.py  qwen_worker.py  scorer.py
src/t2i_eval/eval/utils/: isolated_runner.py  llm_client.py  misc.py
src/t2i_eval/model/: __init__.py  diffusers_model.py  mock_model.py  precomputed_model.py
tests/: diffusers_model_test.py  ella_test.py  genaibench_test.py  geneval_test.py  t2i_corebench_test.py
