[project]
name = "t2i-eval"
version = "0.1.0"
description = "A unified, extensible evaluation framework for image generation models, enabling standardized, reproducible benchmarking across T2I tasks and metrics."
readme = "README.md"
authors = [
    { name = "Vertsineu", email = "vertsineu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "addict>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "clip-benchmark>=1.6.2",
    "cloudpickle>=3.1.2",
    "datasets<3.0.0",
    "decord>=0.6.0",
    "diffusers>=0.36.0",
    "fairseq",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.36.0",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "modelscope>=1.34.0",
    "open-clip-torch>=3.2.0",
    "openai>=2.15.0",
    "opencv-python>=4.13.0.90",
    "oss2>=2.19.1",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "pyyaml>=6.0.3",
    "qwen-vl-utils>=0.0.14",
    "rapidfuzz>=3.14.3",
    "rouge-score>=0.1.2",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "tenacity>=9.1.2",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.30.0",
    "unicodedata2>=17.0.0",
    "zhconv>=1.4.3",
]

[project.scripts]
t2i-eval = "t2i_eval.cli.main:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/t2i_eval"

[tool.uv.sources]
fairseq = { git = "https://github.com/One-sixth/fairseq" }
